<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/border_style"
        android:backgroundTint="@color/white"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingEnd="20dp"
            android:paddingStart="0dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_practice"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <ProgressBar
                android:id="@+id/barPractice"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:progress="80"
                android:progressTint="#00a8ff" />

            <TextView
                android:id="@+id/txtQuestionNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_question_number" />

            <TextView
                android:id="@+id/txtExamNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_exam_number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="2dp"
            android:layout_height="match_parent">

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@drawable/dotted_line_vertical" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/txt_safety_index"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/txtSafetyIndex"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/txt_safety_index_percent"
                android:textAlignment="center"
                android:textColor="#fbc531"
                android:textSize="30sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>