<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:background="@drawable/border_style"
        android:backgroundTint="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/round_style"
                    android:backgroundTint="#00a8ff"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/txt_test"
                        android:src="@drawable/book"
                        app:tint="@color/white" />
                </LinearLayout>

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="@string/txt_test"
                    android:textAlignment="center"
                    android:textColor="@color/black"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:orientation="vertical"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/round_style"
                    android:backgroundTint="#2ecc71"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:contentDescription="@string/txt_save"
                        android:src="@drawable/save"
                        app:tint="@color/white" />
                </LinearLayout>

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="@string/txt_save"
                    android:textAlignment="center"
                    android:textColor="@color/black"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:orientation="vertical"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/round_style"
                    android:backgroundTint="#c0392b"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/txt_wrong"
                        android:src="@drawable/wrong"
                        app:tint="@color/white" />
                </LinearLayout>

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="@string/txt_wrong"
                    android:textAlignment="center"
                    android:textColor="@color/black"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:orientation="vertical"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:paddingStart="6dp"
                    android:paddingEnd="6dp"
                    android:background="@drawable/round_style"
                    android:backgroundTint="#f1c40f"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/txt_wrong_often"
                        android:src="@drawable/wrong_often"
                        app:tint="@color/white" />
                </LinearLayout>

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="@string/txt_wrong_often"
                    android:textAlignment="center"
                    android:textColor="@color/black"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/round_style"
                    android:backgroundTint="#00a8ff"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/txt_shape"
                        android:src="@drawable/car"
                        app:tint="@color/white" />
                </LinearLayout>

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="@string/txt_shape"
                    android:textAlignment="center"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:orientation="vertical"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/round_style"
                    android:backgroundTint="#2ecc71"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/txt_save"
                        android:src="@drawable/tip"
                        app:tint="@color/white" />
                </LinearLayout>

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="@string/txt_tips"
                    android:textAlignment="center"
                    android:textColor="@color/black"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:orientation="vertical"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/round_style"
                    android:backgroundTint="#c0392b"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/txt_wrong_often"
                        android:src="@drawable/subtraction"
                        app:tint="@color/white" />
                </LinearLayout>

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="@string/txt_traffic_signs"
                    android:textAlignment="center"
                    android:textColor="@color/black"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:orientation="vertical"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/round_style"
                    android:backgroundTint="#f1c40f"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:contentDescription="@string/txt_QA"
                        android:src="@drawable/facebook_icon"
                        app:tint="@color/white" />
                </LinearLayout>

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="@string/txt_QA"
                    android:textAlignment="center"
                    android:textColor="@color/black"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>