<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="10dp">

        <TextView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@android:color/white"
            android:drawableStart="@drawable/baseline_arrow_back_24"
            android:onClick="onClickBackToMain"/>

        <!-- This view with weight 1 as a flex space to evenly space out other views -->
        <View android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Câu hỏi điểm liệt"
            android:textSize="17sp"
            android:textColor="@android:color/black"/>

        <!-- This view with weight 1 as a flex space to evenly space out other views -->
        <View android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:drawableEnd="@drawable/baseline_chat_24"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <ImageView
            android:id="@+id/imgQuestionTopic"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/warning_pile"
            android:contentDescription="@string/app_name"/>

        <TextView
            android:id="@+id/txtNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Câu 1/66"
            android:layout_marginStart="2dp"
            android:layout_gravity="center_vertical" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/save"
                android:contentDescription="@string/txt_save"/>
        </LinearLayout>
    </LinearLayout>

<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:orientation="vertical"-->
<!--        android:paddingStart="10dp"-->
<!--        android:paddingEnd="10dp">-->

<!--        <TextView-->
<!--            android:id="@+id/txtQuestion"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/app_name"-->
<!--            android:textColor="@color/black"-->
<!--            android:textSize="20sp"-->
<!--            android:textStyle="bold" />-->

<!--        <View-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="1dp"-->
<!--            android:layout_marginTop="5dp"-->
<!--            android:layout_marginBottom="5dp"-->
<!--            android:background="#bdc3c7" />-->
<!--    </LinearLayout>-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/vpgQuestion"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/layout_bottom"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="#bdc3c7" />

        <LinearLayout
            android:id="@+id/layout_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:gravity="bottom">

            <TextView
                android:id="@+id/tvtPrev"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:textColor="#3498db"
                android:drawableLeft="@drawable/baseline_keyboard_arrow_left_24"
                android:text="@string/btn_prev"
                android:textAllCaps="true"
                android:gravity="center|start"
                android:backgroundTint="@color/white"
                android:onClick="onClickPrev"/>

            <!-- This view with weight 1 as a flex space to evenly space out other views -->
            <View android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/txtShowAllQuestion"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:gravity="center"
                android:textColor="#3498db"
                android:drawableStart="@drawable/baseline_keyboard_double_arrow_up_24"
                android:textAllCaps="true"/>

            <!-- This view with weight 1 as a flex space to evenly space out other views -->
            <View android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/txtNext"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:gravity="center|end"
                android:textColor="#3498db"
                android:drawableEnd="@drawable/baseline_keyboard_arrow_right_24"
                android:text="@string/btn_next"
                android:textAllCaps="true"
                android:onClick="onClickNext"/>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>